// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should have addon 1`] = `
<DocumentFragment>
  .c2 {
  font-size: .875rem;
  padding: 0 0.45rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  border-right: 0;
  border-bottom-left-radius: .125rem;
  border-top-left-radius: .125rem;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: currentcolor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color;
  transition-property: background,border,color;
  background: #0556B2;
  border-color: #0556B2;
  color: #fff;
}

.c0 {
  isolation: isolate;
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
  padding-left: 0.45rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  color: #fff;
  background: #0665d0;
  border-color: #0665d0;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
  border-left: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 c3 src-button-addon"
      shape="rectangle"
    >
      <span>
        Left Addon
      </span>
    </div>
    <span
      class="c4 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should have separated addon 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  isolation: isolate;
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  font-size: .875rem;
  padding: 0 0.45rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  border-left: 0;
  border-bottom-right-radius: .125rem;
  border-top-right-radius: .125rem;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: currentcolor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color;
  transition-property: background,border,color;
  background: #0556B2;
  border-color: #0556B2;
  color: #fff;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:hover {
  background: #0552A9;
  border-color: #0552A9;
}

.c1 {
  isolation: isolate;
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c1 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
  padding-right: 0.45rem;
}

.c1 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c2 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c2:active {
  outline: 0;
}

.c2 .src-button-content {
  color: #fff;
  background: #0665d0;
  border-color: #0665d0;
}

.c2:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c2:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c2 .src-button-content {
  border-radius: .125rem;
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      shape="rectangle"
    >
      <span
        class="c3 src-button-content"
      >
        Content
      </span>
    </button>
    <div
      class="c4 c5 src-button-addon"
      shape="rectangle"
    >
      Separated Right Addon
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Button /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  isolation: isolate;
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  color: #fff;
  background: #0665d0;
  border-color: #0665d0;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;
